Update index.html 14/12/202

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
                     <p><i class="fa-solid fa-paper-plane"></i>alansahai123@gmail.com</p>
-                    <p><i class="fa-solid fa-phone"></i>+910123456879</p>
+                    <p><i class="fa-solid fa-phone"></i>+91 93612 92544</p>
                     <div class="social-icons">
                         <a href="#"><i class="fa-brands fa-facebook"></i></a>
                         <a href="https://www.linkedin.com/in/alan-s-9385a328a/"><i
