update fb link route

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     <p><i class="fa-solid fa-paper-plane"></i>alansahai123@gmail.com</p>
                     <p><i class="fa-solid fa-phone"></i>+91 93612 92544</p>
                     <div class="social-icons">
-                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/alan.sahai.7/"><i class="fa-brands fa-facebook"></i></a>
                         <a href="https://www.linkedin.com/in/alan-s-9385a328a/"><i
                                 class="fa-brands fa-linkedin"></i></a>
                         <a href="https://github.com/alansahai"><i class="fa-brands fa-github"></i></a>
